# on-running-mcp

./: README.md  pyproject.toml
on_running_mcp/: server.py
on_running_mcp/core/: api.py  schemas.py
tests/: test_api.py
