[project]
name = "on-running-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "mcp[cli]>=1.6.0",
    "pillow>=11.1.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "ruff>=0.11.4",
]

[dependency-groups]
dev = ["pytest>=7.2.0", "pytest-cov>=4.0.0", "licensecheck>=2024.1.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
